# kca

./: .gitignore  CLAUDE.md  Makefile  README.md  WORKLOG.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/review_ui/: __init__.py  app.py  service.py
apps/review_ui/tests/: conftest.py  test_app.py  test_ledger_integration.py  test_service.py
contracts/: base.py  ledger.py
contracts/tests/: samples.py  test_contracts.py
data/synthetic/: loader.py
data/synthetic/fixtures/: collateral.json  customers.json  decisions.json
data/synthetic/tests/: test_generator.py  test_loader.py
docs/: README.md  architecture-v1.md  demo-script.md  reuse-measurement.md
docs/backlog/: README.md  WP-01.md  WP-02.md  WP-03.md  WP-04.md  WP-05.md  WP-06.md  WP-07.md  WP-08.md  WP-09.md  WP-10.md  WP-11.md  WP-12.md  WP-13.md  WP-14.md  WP-15.md  WP-16.md  WP-17.md  WP-18.md  WP-19.md  WP-20.md  WP-21.md  WP-22.md  WP-23.md  WP-24.md  WP-25.md
infra/: alembic.ini  docker-compose.yml
infra/keycloak/: realm-kca.json
infra/migrations/: env.py
infra/migrations/versions/: 0001_enable_pgvector.py  0002_knowstore_corpus_items.py  0003_domain_tables.py  0004_corpus_search_columns.py  0005_ledger_events.py  0006_review_cases.py  0007_kca_app_role.py
infra/tests/: test_corpus_items_schema.py  test_migrations.py  test_oidc_roles.py
kca/apps/demo_dashboard/: __init__.py  app.py  data.py  dips.py  planes.py  runners.py
kca/apps/review_ui/: __init__.py  app.py  auth.py  service.py  store.py
kca/contracts/: __init__.py  authz.py  dip_assets.py  dip_contract.py  discovery.py  export_schemas.py  gateway.py  ledger.py  reason_codes.py  reconstruction.py  retrieval.py  routing.py  rules_engine.py  semantics.py
kca/contracts/tests/: samples.py  test_contracts.py
kca/data/synthetic/: generator.py  loader.py  (+1 more)
kca/dips/: credit_risk.py
(+158 files in other folders)
